%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: "ZazzAnimator"
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: Appear
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Attack
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Damage
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Pass
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Escape
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: "Base Layer"
    m_StateMachine: {fileID: 30000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1102 &20000
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: "Idle"
  m_Speed: 1
  m_CycleOffset: 0
  m_ParentStateMachine: {fileID: 30000}
  m_Position: {x: 0, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Motions:
  - {fileID: 7400000, guid: 22e85e85a18940bc80e6d7d39780bdc4, type: 2}
  m_Tag: 
--- !u!1102 &20001
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: "Appear"
  m_Speed: 1
  m_CycleOffset: 0
  m_ParentStateMachine: {fileID: 30000}
  m_Position: {x: 200, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Motions:
  - {fileID: 7400000, guid: 696e4dc8805049a9b12fcee6b330d4f7, type: 2}
  m_Tag: 
--- !u!1102 &20002
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: "AppearLoop"
  m_Speed: 1
  m_CycleOffset: 0
  m_ParentStateMachine: {fileID: 30000}
  m_Position: {x: 400, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Motions:
  - {fileID: 7400000, guid: 22e85e85a18940bc80e6d7d39780bdc4, type: 2}
  m_Tag: 
--- !u!1102 &20003
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: "Attack"
  m_Speed: 1
  m_CycleOffset: 0
  m_ParentStateMachine: {fileID: 30000}
  m_Position: {x: 600, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Motions:
  - {fileID: 7400000, guid: f0406bff445e4562a8af5ac0d8a88914, type: 2}
  m_Tag: 
--- !u!1102 &20004
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: "AttackLoop"
  m_Speed: 1
  m_CycleOffset: 0
  m_ParentStateMachine: {fileID: 30000}
  m_Position: {x: 0, y: 70, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Motions:
  - {fileID: 7400000, guid: c365f21a1d5b4bf8832fa8bb73eb3549, type: 2}
  m_Tag: 
--- !u!1102 &20005
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: "Damage"
  m_Speed: 1
  m_CycleOffset: 0
  m_ParentStateMachine: {fileID: 30000}
  m_Position: {x: 200, y: 70, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Motions:
  - {fileID: 7400000, guid: 8b072b1bc4414360956325a501fb094c, type: 2}
  m_Tag: 
--- !u!1102 &20006
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: "Pass"
  m_Speed: 1
  m_CycleOffset: 0
  m_ParentStateMachine: {fileID: 30000}
  m_Position: {x: 400, y: 70, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Motions:
  - {fileID: 7400000, guid: 27a6103d2a4446ddabd7937afb1e35da, type: 2}
  m_Tag: 
--- !u!1102 &20007
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: "Escape"
  m_Speed: 1
  m_CycleOffset: 0
  m_ParentStateMachine: {fileID: 30000}
  m_Position: {x: 600, y: 70, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Motions:
  - {fileID: 7400000, guid: 256f448f1d65457ebd3c7808c4181190, type: 2}
  m_Tag: 
--- !u!1102 &20008
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: "PassLoop"
  m_Speed: 1
  m_CycleOffset: 0
  m_ParentStateMachine: {fileID: 30000}
  m_Position: {x: 0, y: 140, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Motions:
  - {fileID: 7400000, guid: c52410a42f3c48e7a371cc97a402f4fe, type: 2}
  m_Tag: 
--- !u!1102 &20009
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: "EscapeLoop"
  m_Speed: 1
  m_CycleOffset: 0
  m_ParentStateMachine: {fileID: 30000}
  m_Position: {x: 200, y: 140, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Motions:
  - {fileID: 7400000, guid: c07d6b74ae9f4bdd94e9906c759fcc12, type: 2}
  m_Tag: 
--- !u!1102 &20010
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: "zaz_escape_loop"
  m_Speed: 1
  m_CycleOffset: 0
  m_ParentStateMachine: {fileID: 30000}
  m_Position: {x: 400, y: 140, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Motions:
  - {fileID: 7400000, guid: c52410a42f3c48e7a371cc97a402f4fe, type: 2}
  m_Tag: 
--- !u!1101 &10000
Transition:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Appear
    m_EventTreshold: 0
  m_SrcState: {fileID: 20000}
  m_DstState: {fileID: 20001}
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  serializedVersion: 2
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_HasExitTime: 
  m_CanTransitionToSelf: 0
--- !u!1101 &10001
Transition:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent:
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_SrcState: {fileID: 20001}
  m_DstState: {fileID: 20002}
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  serializedVersion: 2
  m_TransitionDuration: 0.1153846
  m_TransitionOffset: 0
  m_HasExitTime: 
  m_CanTransitionToSelf: 0
--- !u!1101 &10002
Transition:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Attack
    m_EventTreshold: 0
  m_SrcState: {fileID: 20002}
  m_DstState: {fileID: 20003}
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  serializedVersion: 2
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_HasExitTime: 
  m_CanTransitionToSelf: 0
--- !u!1101 &10003
Transition:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent:
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_SrcState: {fileID: 20003}
  m_DstState: {fileID: 20004}
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  serializedVersion: 2
  m_TransitionDuration: 0.1
  m_TransitionOffset: 0
  m_HasExitTime: 
  m_CanTransitionToSelf: 0
--- !u!1101 &10004
Transition:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Damage
    m_EventTreshold: 0
  m_SrcState: {fileID: 20004}
  m_DstState: {fileID: 20005}
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  serializedVersion: 2
  m_TransitionDuration: 0.375
  m_TransitionOffset: 0
  m_HasExitTime: 
  m_CanTransitionToSelf: 0
--- !u!1101 &10005
Transition:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Pass
    m_EventTreshold: 0
  m_SrcState: {fileID: 20004}
  m_DstState: {fileID: 20006}
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  serializedVersion: 2
  m_TransitionDuration: 0.375
  m_TransitionOffset: 0
  m_HasExitTime: 
  m_CanTransitionToSelf: 0
--- !u!1101 &10006
Transition:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Attack
    m_EventTreshold: 0
  m_SrcState: {fileID: 20004}
  m_DstState: {fileID: 20002}
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  serializedVersion: 2
  m_TransitionDuration: 0.375
  m_TransitionOffset: 0
  m_HasExitTime: 
  m_CanTransitionToSelf: 0
--- !u!1101 &10007
Transition:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Attack
    m_EventTreshold: 0
  m_SrcState: {fileID: 20005}
  m_DstState: {fileID: 20003}
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  serializedVersion: 2
  m_TransitionDuration: 0.75
  m_TransitionOffset: 0
  m_HasExitTime: 
  m_CanTransitionToSelf: 0
--- !u!1101 &10008
Transition:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Escape
    m_EventTreshold: 0
  m_SrcState: {fileID: 20005}
  m_DstState: {fileID: 20007}
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  serializedVersion: 2
  m_TransitionDuration: 0.75
  m_TransitionOffset: 0
  m_HasExitTime: 
  m_CanTransitionToSelf: 0
--- !u!1101 &10009
Transition:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent:
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_SrcState: {fileID: 20006}
  m_DstState: {fileID: 20008}
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  serializedVersion: 2
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_HasExitTime: 
  m_CanTransitionToSelf: 0
--- !u!1101 &10010
Transition:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent:
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_SrcState: {fileID: 20007}
  m_DstState: {fileID: 20009}
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  serializedVersion: 2
  m_TransitionDuration: 0.1
  m_TransitionOffset: 0
  m_HasExitTime: 
  m_CanTransitionToSelf: 0
--- !u!1107 &30000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: "Base Layer"
  m_States:
  - {fileID: 20000}
  - {fileID: 20001}
  - {fileID: 20002}
  - {fileID: 20003}
  - {fileID: 20004}
  - {fileID: 20005}
  - {fileID: 20006}
  - {fileID: 20007}
  - {fileID: 20008}
  - {fileID: 20009}
  - {fileID: 20010}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_MotionSetCount: 1
  m_OrderedTransitions:
    data:
      first: {fileID: 20000}
      second:
      - {fileID: 10000}
    data:
      first: {fileID: 20001}
      second:
      - {fileID: 10001}
    data:
      first: {fileID: 20002}
      second:
      - {fileID: 10002}
    data:
      first: {fileID: 20003}
      second:
      - {fileID: 10003}
    data:
      first: {fileID: 20004}
      second:
      - {fileID: 10004}
    data:
      first: {fileID: 20004}
      second:
      - {fileID: 10005}
    data:
      first: {fileID: 20004}
      second:
      - {fileID: 10006}
    data:
      first: {fileID: 20005}
      second:
      - {fileID: 10007}
    data:
      first: {fileID: 20005}
      second:
      - {fileID: 10008}
    data:
      first: {fileID: 20006}
      second:
      - {fileID: 10009}
    data:
      first: {fileID: 20007}
      second:
      - {fileID: 10010}
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 20000}
